# ibdtools

./: .gitignore  LICENSE  Makefile  README.md  Readme.md  conv2bin.c  conv2binM.c  csort.c  env.yml  filter_by_ibd_proportion.py  git_version.txt  het2hom.c  ibdclust.c  ibdhap2dip.c  ibdmap.c  ibdmerge.c  ibdplot.py  ibdqc.c  ibdstat.c  ibdsum.c  ibdsum2.c  ibdtotal.c  inlinefunc.h  macs_tree_parser.c  makefile  meson.build  ms2vcf.c  sstat.c  tpool.c  tpool.h  tsibd.py  upgma.c  vcfpos.c  vector.c  vector.h
appimage/: ibdtools.desktop
data/: example.bcf.gz.csi
example/: example.sh  read_mat.py  run_ibdtools.sh  simulate_data.py
include/: chromosomes.hpp  common.hpp  genotypes.hpp  gmap.hpp  ibdcoverage.hpp  ibdfile.hpp  ibdmatrix.hpp  ibdmerger.hpp  ibdsorter.hpp  ibdspliter.hpp  ibdstat.hpp  metafile.hpp  positions.hpp  samples.hpp
src/: Makefile  chromosomes.cpp  common.cpp  genotypes.cpp  gmap.cpp  gtest.cpp  ibdcoverage.cpp  ibdfile.cpp  ibdmatrix.cpp  ibdmerge.cpp  ibdmerger.cpp  ibdsort.cpp  ibdsorter.cpp  ibdsplitters.cpp  ibdstat.cpp  ibdtools.cpp  ibdtotal.cpp  io.cpp  metafile.cpp  positions.cpp  scopedtimer.cpp  svsplitter.cpp  tournamenttree.cpp
test/: Makefile  bench.cpp  cmp2browning.sh  example.ibd  example_sample_name.txt  example_shuffled.ibd  gtest.cpp  ibdtools.cpp  mk_exmaple.sh  tests.cpp
